# zkp2p-tlsn-rust

./: .env.example  .env.local  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build-cross-platform.sh  build.rs
.cargo/: config.toml
attestation/: present.rs  prove.rs  verify.rs
config/: default.toml
doc/: PRD.md
include/: tlsnprover.h  zkp2p_ffi.h
src/: config.rs  lib.rs
src/attestation/: mod.rs
src/domain/: args.rs  auth.rs  mod.rs  providers.rs  server.rs  transaction.rs
src/ffi/: mod.rs
src/http/: mod.rs
src/notary/: mod.rs
src/providers/: mod.rs  wise.rs
src/tls/: mod.rs
src/utils/: file_io.rs  http.rs  info.rs  mod.rs  notary.rs  patterns.rs  providers.rs  text_parser.rs  tls.rs  transcript.rs
tests/: test_ffi.c  test_ffi.cpp
