[package]
name = "zkp2p-tlsn-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
notary-client = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-tls-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tls-server-fixture = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6168663" }

bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
http-body-util = "0.1"
hex = "0.4"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }
serde_json = "1.0"
tokio = { version = "1.35", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "attestation_prove"
path = "attestation/prove.rs"

[[example]]
name = "attestation_present"
path = "attestation/present.rs"

[[example]]
name = "attestation_verify"
path = "attestation/verify.rs"


# [[example]]
# name = "interactive"
# path = "interactive/interactive.rs"